# ia-docs-iff-python

./: .env  .env.example  .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
app/core/: config.py
docs/: Module_User.md
tests/: conftest.py
